--- a/assignment1_101582362.ipynb
+++ b/assignment1_101582362.ipynb
@@ -2,107 +2,202 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "step-a",
+   "execution_count": 1,
+   "id": "0f21f0d3-8dec-47bd-8bec-55ef9ed94c70",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "             Yoga              \n",
+      "======================================\n",
+      "Berhan: worked yoga for 30 min.\n",
+      "Beray: worked yoga for 60 min.\n",
+      "Gonzalo: worked yoga for 53 min.\n",
+      "\n",
+      "            Running            \n",
+      "======================================\n",
+      "Berhan: worked running for 45 min.\n",
+      "Beray: worked running for 61 min.\n",
+      "Gonzalo: worked running for 8 min.\n",
+      "\n",
+      "         Weightlifting         \n",
+      "======================================\n",
+      "Beray: worked weightlifting for 62 min.\n",
+      "Gonzalo: worked weightlifting for 61 min.\n",
+      "\n",
+      "       Most Active Users       \n",
+      "Great job staying active, Beray!\n",
+      "Great job staying active, Gonzalo!\n",
+      "The top worker by 183 minutes: Beray\n",
+      "The least worker by 95 minutes: Berhan\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Please enter the name for query:  beray\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Beray:\n",
+      "Yoga: 60min\n",
+      "Running 61min\n",
+      "Weightlifting: 62min\n",
+      "Total: 183min\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
-    "Author: <YOUR REAL FIRST AND LAST NAME>\n",
+    "Author: Beray Erdogan>\n",
     "Assignment: #1\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "\n",
+    "# Step b: Create 4 variables\n",
+    "gym_member = \"Alex Alliton\" #type string\n",
+    "preferred_weight_kg = 20.5 #type float\n",
+    "highest_reps = 25 #type integer\n",
+    "membership_active = True #type boolean\n",
+    "\n",
+    "# Step c: Create a dictionary named workout_stats\n",
+    "\n",
+    "#type dict  (yoga,running,weightlifting) \n",
+    "workout_stats = {\n",
+    "        \"Berhan\": (30,45,20),\n",
+    "        \"Beray\": (60,61,62),\n",
+    "        \"Gonzalo\": (53,8,61)\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "# Step d: Calculate total workout minutes using a loop and add to dictionary\n",
+    "# calculate total workout minutes\n",
+    "workout_stats.update({\n",
+    "    key + \"_Total\": sum(value) \n",
+    "    for key, value in workout_stats.items()\n",
+    "    })\n",
+    "\n",
+    "\n",
+    "# Step e: Create a 2D nested list called workout_list\n",
+    "# filter workout minutes for every person (type list)\n",
+    "workout_list = [\n",
+    "        [key,value[0],value[1],value[2]] \n",
+    "        for key,value in workout_stats.items()\n",
+    "        if \"_\" not in key\n",
+    "        ]\n",
+    "\n",
+    "\n",
+    "\n",
+    "# Step f: Slice the workout_list\n",
+    "#filter yoga minutes for every person\n",
+    "yoga = [\n",
+    "        workout[0:2] \n",
+    "        for workout in workout_list\n",
+    "        ]\n",
+    "\n",
+    "#filter running minutes for every person\n",
+    "running = [\n",
+    "        workout[0:3:2]\n",
+    "        for workout in workout_list\n",
+    "        ]\n",
+    "\n",
+    "#filter weightlifting minutes for last 2 person on the list\n",
+    "weightlifting = [\n",
+    "        workout[0::3] \n",
+    "        for workout in workout_list[1:]\n",
+    "        ]\n",
+    "\n",
+    "#print workout values\n",
+    "print(f\"\\n{'Yoga':^31}\")\n",
+    "print(\"======================================\")\n",
+    "for workout in yoga:\n",
+    "    print(f\"{workout[0]:5}: worked yoga for {workout[1]} min.\")\n",
+    "\n",
+    "\n",
+    "print(f\"\\n{'Running':^31}\")\n",
+    "print(\"======================================\")\n",
+    "for workout in running:\n",
+    "    print(f\"{workout[0]:5}: worked running for {workout[1]} min.\")\n",
+    "\n",
+    "\n",
+    "print(f\"\\n{'Weightlifting':^31}\")\n",
+    "print(\"======================================\")\n",
+    "for workout in weightlifting:\n",
+    "    print(f\"{workout[0]:5}: worked weightlifting for {workout[1]} min.\")\n",
+    "\n",
+    "\n",
+    "# Step g: Check if any friend's total >= 120\n",
+    "\n",
+    "substring = \"_\"\n",
+    "print(f\"\\n{'Most Active Users':^31}\")\n",
+    "for person, minutes in workout_stats.items():\n",
+    "    if \"_\" in person:\n",
+    "        if minutes > 120:\n",
+    "            person = person.split(substring)[0]\n",
+    "            print (f\"Great job staying active, {person}!\")\n",
+    "\n",
+    "# Step i: Friend with highest and lowest total workout minutes\n",
+    "total_work_minutes = {\n",
+    "            person.split(\"_\")[0] : total\n",
+    "            for person, total in workout_stats.items()\n",
+    "            if \"_\" in person\n",
+    "        }\n",
+    "min_person = min(total_work_minutes.items(), key=lambda x: x[1])\n",
+    "max_person = max(total_work_minutes.items(), key=lambda x: x[1])\n",
+    "\n",
+    "print(f\"The top worker by {max_person[1]} minutes: {max_person[0]}\")  \n",
+    "print(f\"The least worker by {min_person[1]} minutes: {min_person[0]}\")\n",
+    "\n",
+    "            \n",
+    "\n",
+    "# Step h: User input to look up a friend\n",
+    "user_query = input(\"\\nPlease enter the name for query: \")\n",
+    "user_query = user_query.strip().capitalize()\n",
+    "if user_query in workout_stats.keys():\n",
+    "    print(f\"\\n{user_query}:\")\n",
+    "    print(f\"Yoga: {workout_stats[user_query][0]}min\")\n",
+    "    print(f\"Running {workout_stats[user_query][1]}min\")\n",
+    "    print(f\"Weightlifting: {workout_stats[user_query][2]}min\")\n",
+    "    print(f\"Total: {workout_stats[user_query][0] + workout_stats[user_query][1] + workout_stats[user_query][2]}min\")\n",
+    "else:\n",
+    "    print(f\"Friend {user_query} not found in the records\")\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "step-b",
+   "id": "f52f6beb-bca7-46dc-a896-9d89b2b19e00",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Step b: Create 4 variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "step-c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step c: Create a dictionary named workout_stats"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "step-d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step d: Calculate total workout minutes using a loop and add to dictionary"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "step-e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step e: Create a 2D nested list called workout_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "step-f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step f: Slice the workout_list"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "step-g",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step g: Check if any friend's total >= 120"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "step-h",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step h: User input to look up a friend"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "step-i",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Step i: Friend with highest and lowest total workout minutes"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.12.0"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.25"
   }
  },
  "nbformat": 4,
